# putioarr

./: CHANGELOG.md  CI_CD.md  Cargo.toml  README.md  RELEASE_NOTES.md  TESTING.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docker/: Dockerfile
src/: config_tests.rs  main.rs  utils.rs  utils_tests.rs
src/download_system/: mod.rs  transfer_tests.rs
src/http/: handlers.rs  mod.rs  routes.rs  routes_tests.rs
src/services/: mod.rs  putio.rs  putio_tests.rs  transmission.rs  transmission_tests.rs
