[package]
name = "putioarr"
description = "put.io to sonarr/radarr/whisparr proxy"
authors = ["Csaba Okrona <ochronus@ochronus.com"]
repository = "https://github.com/ochronus/putioarr"
license = "MIT"
version = "0.5.37"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.0"
ahash = "=0.8.12"
anyhow = "1.0"
async-channel = "2.5.0"
async-recursion = "1.0.5"
base64 = "0.22.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3"
directories = "6.0"
env_logger = "0.11.3"
figment = { version = "0.10.10", features = ["toml"] }
file-owner = "0.1.2"
futures = "0.3.28"
in-container = "1.1.0"
lava_torrent = "0.11.1"
log = "0.4.29"
magnet-url = "3.0.0"
nix = { version = "0.30.1", features = ["fs", "user"] }
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinytemplate = "1.2.1"
tokio = { version = "1.43.1", features = ["fs"] }
urldecode = "0.1.1"

[dev-dependencies]
cargo-bump = "1.1.0"
mockito = "1.2.0"
tokio = { version = "1.43.1", features = ["test-util", "macros"] }
actix-web = { version = "4.12.1", features = ["macros"] }
actix-rt = "2.11.0"
tempfile = "3.24.0"
